latest tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -13,7 +13,7 @@ unbind n
 
  
 # set bash shell
-set -g deafault-command "/usr/bin/zsh"
+set -g default-command "/usr/bin/zsh"
 set -g default-shell "/usr/bin/zsh"
 
 # set start from 1
@@ -43,14 +43,14 @@ set-window-option -g window-status-current-format ' #I #W '
 
 ## set window notifications
 set-option -g visual-activity on
-set-option -g visual-content on
+#set-option -g visual-content on
 set-window-option -g monitor-activity on
 set-window-option -g automatic-rename off
 
 ## tmux window titling for X
 set-option -g set-titles on
 set-option -g set-titles-string '[#I] #W'
-set-window-option -g automatic-rename on
+set-window-option -g automatic-rename off
 set-window-option -g window-status-format ' #I #W '
 set-window-option -g window-status-attr bold
 
