--- a/tmux.conf
+++ b/tmux.conf
@@ -30,7 +30,7 @@ unbind C-b
 set -g prefix C-a 
 
 # encoding uft8
-set-option -g status-utf8 on
+# set-option -g status-utf8 on
 
 ##########################################
 ##########################################
