--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,4 @@
-##########################################
+y##########################################
 ##########################################
 ##########################################
 #global setting session, window and pane
@@ -11,23 +11,23 @@ unbind ,
 unbind .
 unbind n
 
- 
+
 # set bash shell
-set -g default-command "/usr/bin/zsh"
-set -g default-shell "/usr/bin/zsh"
+set -g default-command "/bin/zsh"
+set -g default-shell "/bin/zsh"
 
 # set start from 1
-set -g base-index 1 
+set -g base-index 1
 
 # colourful
 set -g default-terminal "xterm-256color"
 
 # set history limit
-set -g history-limit 5000 
+set -g history-limit 5000
 
 # act like GUN screen
 unbind C-b
-set -g prefix C-a 
+set -g prefix C-a
 
 # encoding uft8
 # set-option -g status-utf8 on
@@ -79,7 +79,7 @@ set-option -g status-bg colour11
 set-option -g status-fg colour8
 
 
-set-option -g status-left ' #[bold]? #S#[default] ?'
+set-option -g status-left ' #[bold]● #S#[default] ● | '
 set-option -g status-right '#[bold]#(whoami) ● #H#[default] '
 
 set-option -g status-right-length 60
@@ -100,7 +100,10 @@ bind-key N command-prompt 'rename-session %%'
 
 bind-key , previous-window # <
 bind-key . next-window # >
+set -g mouse on
 # bind to reloade config
-bind r source ~/.tmux.conf 
+
+bind r source ~/.tmux.conf
 set-option -sg escape-time 10
 set-option -g default-terminal "screen-256color"
+
