updated to tmux 2.9

--- a/tmux.conf
+++ b/tmux.conf
@@ -13,8 +13,8 @@ unbind n
 
 
 # set bash shell
-set -g default-command "/bin/zsh"
-set -g default-shell "/bin/zsh"
+set -g default-command "/usr/local/bin/zsh"
+set -g default-shell "/usr/local/bin/zsh"
 
 # set start from 1
 set -g base-index 1
@@ -36,9 +36,7 @@ set -g prefix C-a
 ##########################################
 
 # highlight active window
-set-window-option -g window-status-current-bg colour166
-set-window-option -g window-status-current-fg colour15
-set-window-option -g window-status-current-attr bold
+set-window-option -g window-status-current-style bg='colour166',fg='colour15',bold
 set-window-option -g window-status-current-format ' #I #W '
 
 ## set window notifications
@@ -52,7 +50,7 @@ set-option -g set-titles on
 set-option -g set-titles-string '[#I] #W'
 set-window-option -g automatic-rename off
 set-window-option -g window-status-format ' #I #W '
-set-window-option -g window-status-attr bold
+set-window-option -g window-status-style bold
 
 
 ###########################################
@@ -87,8 +85,8 @@ set-option -g status-left-length 60
 
 
 #pane border and colors
-set-option -g pane-active-border-fg yellow
-set-option -g pane-border-fg white
+set-option -g pane-active-border-style fg='yellow'
+set-option -g pane-border-style fg='white'
 
 # bind-keys
 bind-key x kill-pane
@@ -106,4 +104,3 @@ set -g mouse on
 bind r source ~/.tmux.conf
 set-option -sg escape-time 10
 set-option -g default-terminal "screen-256color"
-
